Translate button is now always visible, removed custom margin for columns (it generates issues with button position).

--- a/app/ux/css/screen.css
+++ b/app/ux/css/screen.css
@@ -30,7 +30,7 @@ body {
 #print.button,
 #edit.button {
   position: absolute;
-  margin: 2rem;
+  margin: 1rem;
   bottom: 0;
   box-shadow: 0 1px 2px rgba(34,36,38,.8);
 }
@@ -58,8 +58,8 @@ body {
   #translate.button,
   #print.button,
   #edit.button {
-    margin-left: 3rem;
-    margin-right: 3rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 }
 
@@ -75,16 +75,7 @@ body {
     width: 100%;
   }
 
-  #workspace .column:first-of-type {
-    padding-right: .5rem;
-  }
-
-  #translate.button,
   #edit.button {
     display: none;
-  }
-
-  #workspace .column:last-of-type {
-    padding-left: .5rem;
   }
 }
